[gd_scene load_steps=32 format=2]

[ext_resource path="res://Player/Player_StateMachine.gd" type="Script" id=1]
[ext_resource path="res://Audio/sword_2.wav" type="AudioStream" id=6]
[ext_resource path="res://Audio/sword_3.wav" type="AudioStream" id=8]
[ext_resource path="res://Audio/mantis_lord_down_slash.wav" type="AudioStream" id=9]
[ext_resource path="res://Audio/hero_wall_slide.wav" type="AudioStream" id=10]
[ext_resource path="res://Audio/sword_1.wav" type="AudioStream" id=11]
[ext_resource path="res://Sprites/Player_sprite_sheet.png" type="Texture" id=12]
[ext_resource path="res://Audio/hero_run_footsteps_grass.wav" type="AudioStream" id=13]
[ext_resource path="res://Audio/hopper_jump.wav" type="AudioStream" id=14]

[sub_resource type="Animation" id=1]
resource_name = "Attack2"
length = 0.5
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 47, 48, 49, 50, 51 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer5")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 0.225 )
}

[sub_resource type="Animation" id=2]
resource_name = "Attack3"
length = 0.55
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 52, 53, 54, 55, 56, 57 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer5")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0.225 )
}

[sub_resource type="Animation" id=3]
length = 0.52
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 41, 42, 43, 44, 45, 46 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer5")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 11 )
} ],
"times": PoolRealArray( 0.225 )
}

[sub_resource type="Animation" id=4]
resource_name = "CrouchIdle"
length = 0.8
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 77, 78, 79, 80 ]
}

[sub_resource type="Animation" id=5]
resource_name = "CrouchMoving"

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 14, 107 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer3")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 14 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=7]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 71, 72, 73, 74 ]
}

[sub_resource type="Animation" id=8]
length = 0.35
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 35, 36, 37 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer5")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 9 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=9]
length = 0.24
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 61, 59, 60 ]
}

[sub_resource type="Animation" id=10]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 90, 91, 92 ]
}

[sub_resource type="Animation" id=11]
length = 0.27
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 58, 59, 60, 61, 62, 63 ]
}

[sub_resource type="Animation" id=12]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 81, 82, 83, 84, 85, 86, 87 ]
}

[sub_resource type="Animation" id=13]
length = 2.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 88, 89, 88, 89, 88, 89, 88, 89, 88, 89, 88, 89, 88, 89 ]
}

[sub_resource type="Animation" id=14]
length = 0.8
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 93, 94, 95, 100 ]
}

[sub_resource type="Animation" id=15]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 104, 105, 106, 107 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 14 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=16]
length = 1.8
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2, 1.35, 1.5, 1.65, 1.8, 1.95, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6, 7, 8, 3, 4, 5, 6, 7, 8, 3, 4, 5 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.254998,
"start_offset": 0.0,
"stream": ExtResource( 13 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=17]
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 111, 112, 111, 112, 111, 112, 116 ]
}

[sub_resource type="Animation" id=18]
length = 2.56
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 26, 27, 26, 27, 26, 27, 26, 27, 26, 27, 26, 27, 26 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer4")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0105485,
"start_offset": 0.0,
"stream": ExtResource( 10 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=19]
length = 0.35
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer5")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 11 )
} ],
"times": PoolRealArray( 0.125 )
}

[sub_resource type="Animation" id=20]
length = 0.35
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 31, 32, 33, 34 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer5")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 0.125 )
}

[sub_resource type="Animation" id=21]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 38, 39, 38, 39, 38, 39, 38, 39, 38, 39 ]
}

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 26, 56 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 277.14, 193.632 )
scale = Vector2( 0.5, 0.5 )
collision_layer = 2
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Player Idle"
anims/Attack2 = SubResource( 1 )
anims/Attack3 = SubResource( 2 )
anims/Attackt1 = SubResource( 3 )
anims/CrouchIdle = SubResource( 4 )
anims/CrouchMoving = SubResource( 5 )
"anims/Double Jump" = SubResource( 6 )
anims/Grab = SubResource( 7 )
anims/Ground_slam = SubResource( 8 )
anims/Hooking = SubResource( 9 )
anims/Hurt = SubResource( 10 )
"anims/Player Casting" = SubResource( 11 )
"anims/Player Die" = SubResource( 12 )
"anims/Player Falling" = SubResource( 13 )
"anims/Player Idle" = SubResource( 14 )
"anims/Player Jumping" = SubResource( 15 )
"anims/Player Running" = SubResource( 16 )
anims/Slide = SubResource( 17 )
anims/Wall_Slide = SubResource( 18 )
anims/air1 = SubResource( 19 )
anims/air2 = SubResource( 20 )
anims/air3 = SubResource( 21 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="AudioStreamPlayer5" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.418701, -11.5197 )
scale = Vector2( 3.6374, 3.92665 )
texture = ExtResource( 12 )
hframes = 140
frame = 47

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 22 )

[node name="CrouchCollisionCeil" type="RayCast2D" parent="."]
position = Vector2( 0, 32 )
rotation = 3.14159
enabled = true

[node name="AirAttackCollisionFloor" type="RayCast2D" parent="."]
position = Vector2( 0, 32 )
enabled = true

[node name="WallSlideCollision_1" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 30, 0 )

[node name="WallSlideCollision_2" type="RayCast2D" parent="."]
position = Vector2( 0, -40 )
enabled = true
cast_to = Vector2( 30, 0 )

[node name="WallGrabCollision_1" type="RayCast2D" parent="."]
position = Vector2( 0, -70 )
enabled = true
cast_to = Vector2( 30, 0 )

[node name="WallGrabCollision_2" type="RayCast2D" parent="."]
position = Vector2( 0, -60 )
enabled = true
cast_to = Vector2( 30, 0 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
